--- a/10.03/index.html
+++ b/10.03/index.html
@@ -17,6 +17,7 @@
          <div class="time" id="hour">00</div>
          <div class="time" id="minute">00</div>
          <div class="time" id="second">00</div>
+         <div class="time" id="millisecond">00</div>
     </div>
 </div>
 <script src="script.js"></script>
