--- a/14.03/index1.html
+++ b/14.03/index1.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<div class="notification" id="modal"></div>
+
 <div class="all">
     <div class="container">
+        <div id="modal"></div>
         <h1 class="questionnaire">Анкета для корпоративных клиентов</h1>
         <div class=""></div>
         <p class="personal">Личные данные</p>
